k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: value-fabric
  labels:
    name: value-fabric
    app.kubernetes.io/name: value-fabric
    app.kubernetes.io/component: platform
