k8s/base/postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: value-fabric
  labels:
    app: postgres
    component: infrastructure
spec:
  type: ExternalName
  externalName: postgres-rw.value-fabric.svc.cluster.local
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
